--- a/dev/index.html
+++ b/dev/index.html
@@ -9,247 +9,105 @@
 <head lang="Es">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Airpak</title>
+    <title>ONE + U2 - Welcome</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 </head>
 
 <body>
 
-    <header class="medium large">
-        <div class="wrap">
-            <div class="logotipo">
-                <img src="img/logoAirpak.png" alt="logo airpak">
-            </div>
-            <div class="infoCliente">
-                <p>Atención al cliente</p>
-                <div class="contacto">
-                    <span class="icon-phone"> (000) 123-45678</span><span class="icon-envelope"> info@airpak.com</span>
-                </div>
-            </div>
-            <div class="redesSociales">
+<!-- CONTENEDOR GENERAL -->
+<div class="container-fluid">
+    
+    <!-- INICIO CABECERA -->
+    <header>
+        <div class="row">
+            <!-- LOGOTIPO INICIO -->
+            <figure class="col-xs-4">
+                <img src="" alt="">
+                <p>LOGOTIPO</p>
+            </figure>
+            <!-- LOGOTIPO FIN -->
+            <!-- NAVEGACION INICIO -->
+            <nav class="menu col-xs-8">
                 <ul>
-                    <li>
-                        <a href="" class="icon-twitter"></a>
-                    </li>
-                    <li>
-                        <a href="" class="icon-facebook"></a>
-                    </li>
+                    <li><a href="">take action</a></li>
+                    <li><a href="">about one</a></li>
+                    <li><a href="">the issues</a></li>
+                    <li><a href="">blog</a></li>
                 </ul>
+            </nav><!-- NAVEGACION PRINCIPAL FIN -->
+            
 
-                <div class="formulario">
-                    <form action="">
-                        <select name="paises" id="paises">
-                            <option value="CR">Costa Rica</option>
-                            <option value="NI">Nicaragua</option>
-                        </select>
-                    </form>
+            <div class="cajaBusqueda col-xs-12">
+                <div class="row">
+                    <div class="menu2Mobile col-xs-2">
+                        <button data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-menu-hamburger"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                            <li><a href="#">(red)</a></li>
+                            <li><a href="#">press</a></li>
+                        </ul>
+                    </div><!-- FIN MENU 2 -->
+
+                    <!-- INICIO COUNTRIES -->
+                    <div class="countries col-xs-2">
+                        <button data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-align-center"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                            <li><a href="#">international</a></li>
+                            <li><a href="#">africa</a></li>
+                            <li><a href="#">france</a></li>
+                            <li><a href="#">germany</a></li>
+                            <li><a href="#">netherlands</a></li>
+
+                        </ul>
+                    </div>
+                    <!-- FIN COUNTRIES -->
+
+                    <!-- INICIO USER -->
+                    <div class="user col-xs-2">
+                        <a href="">
+                            <span class="glyphicon glyphicon-user"></span>
+                        </a>
+                    </div>
+                    <!-- FIN USER -->
+                    <!-- INICIO FORM -->
+                    <div class="form col-xs-6">
+                        <form action="">
+                        <button class="">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                            <input type="text" placeholder="Search">
+
+                        </form>
+                    </div>
+                    <!-- FIN FORM -->  
                 </div>
             </div>
+
         </div>
     </header>
+
     <!-- FIN CABECERA -->
 
-    <article class="slider large">
-        <div class="wrap">
-            <img src="img/BannerAirpakHome.jpg" alt="">
-        </div>
-    </article>
-    <!-- FIN SLIDER -->
 
-    <section class="servicios medium large">
-        <div class="wrap">
-            <article>
-                <figure>
-                    <img src="img/Dinero.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Transferencia de Dinero</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Envía y Recibe dinero en efectivo de la forma más rápida, conveniente y segura a través de nuestra Red de Puntos de Atención.
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-            <article>
-                <figure>
-                    <img src="img/tarjetaAirpak.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Tarjeta Prepago</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Es el medio fácil y seguro de manejar tu remesa, además puedes gozar de grandes sus beneficios.
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-            <article>
-                <figure>
-                    <img src="img/pagaloTodo.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Págalo Todo</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Paga tus Servicios Básicos de manera conveniente y sin largas filas en un mismo lugar .
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-            <article>
-                <figure>
-                    <img src="img/tiempoAire.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Tiempo aíre</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Recargas de minutos con promociones exclusivas.
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-            <article>
-                <figure>
-                    <img src="img/Mapfre.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Seguros MAPFRE</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Asegura tu Dinero, tu vida y la de los tuyos con este novedoso servicio.
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-            <article>
-                <figure>
-                    <img src="img/puntosAtencion.jpg" alt="">
-                </figure>
-                <div class="titulo">
-                    <h2>Puntos de Atención</h2>
-                    <div class="boton"><a href=""><span class="icon-angle-right"></span></a>
-                    </div>
-                </div>
-                <!-- FIN -->
-                <div class="contenido">
-                    Envía y Recibe dinero en efectivo de la forma más rápida, conveniente y segura a través de nuestra Red de Puntos de Atención.
-                </div>
-            </article>
-            <!-- FIN SERVICIO -->
-        </div>
-    </section>
-    <!-- FIN SERVICIOS -->
-
-    <!-- INICIO ALIADOS -->
-    <section class="aliados medium large">
-        <div class="wrap">
-            <h2>Nuestros Aliados</h2>
-            <ul>
-                <li>
-                    <span class="icon icon-westernUnion"></span>
-                </li>
-                <li>
-                    <span class="icon icon-mapfre"></span>
-                </li>
-                <li>
-                    <span class="icon icon-claro"></span>
-                </li>
-                <li>
-                    <span class="icon icon-movistar"></span>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!-- FIN ALIADOS -->
-
-    <!-- INICIO FOOTER -->
-    <footer class="medium large">
-        <div class="wrap">
+</div><!-- FIN CONTENEDOR GENERAL -->
 
 
-            <article>
-                <figure>
-                    <img src="img/airpakFooter.png" alt="">
-                </figure>
-                <span>&copy; Airpak forma parte de Grupo Coen</span>
-                <span class="icon icon-grupoCoen"></span>
-                <div class="contacto">
-                    <span class="icon-phone"> (000) 123-45678</span><span class="icon-envelope"> info@airpak.com</span>
-                </div>
-                <a href="http://listomarketing.com" target="_blank">
-                    <span class="icon icon-ListoMarketing"></span>
-                </a>
-            </article>
-            <article>
-                <h3>Países</h3>
-                <ul>
-                    <li>
-                        <a href="">Nicaragua</a>
-                    </li>
-                    <li>
-                        <a href="">Costa Rica</a>
-                    </li>
-                    <li>
-                        <a href="">Honduras</a>
-                    </li>
-                    <li>
-                        <a href="">El Salvador</a>
-                    </li>
-                    <li>
-                        <a href="">Guatemala</a>
-                    </li>
-                    <li>
-                        <a href="">México</a>
-                    </li>
-                </ul>
-            </article>
-            <article>
-                <h3>Otros Enlaces</h3>
-                <ul>
-                    <li>
-                        <a href="">Sobre Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="">Servicio al Cliente</a>
-                    </li>
-                    <li>
-                        <a href="">
-                        Buscar una localidad
-                    </a>
-                    </li>
-                    <li>
-                        <a href="">Empieza tu empresa</a>
-                    </li>
-                    <li>
-                        <a href="">Promociones</a>
-                    </li>
-                    <li>
-                        <a href="">Fundacion Coen</a>
-                    </li>
-                </ul>
-            </article>
-        </div>
-    </footer>
-    <!-- FIN FOOTER -->
+   
 
-
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
 </html>
